<resources>
    <string name="app_name">ProChat</string>
    <string name="login">Login</string>
    <string name="mobile_number_email_hint">Mobile Number / Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="new_user">New User?</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="forgot_password_desc">Please add your Email to receive a verification mail to change your password.</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="recieve_email_msg">You should receive the email within <font color='#99DFC3'>60</font> seconds</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="accept_terms_conditions">Accept <font color='#99DFC3'>Terms &amp; Conditions</font> and <font color='#99DFC3'>Privacy Policy</font></string>
    <string name="verify_account">Verify Account</string>
    <string name="verify_account_desc">Please add the 4 digits code we sent to you on the number +20 10 27 18 11111 to verify your account.</string>
    <string name="verify">Verify</string>
    <string name="verification_code_message">You should receive the verification code message within <font color='#99DFC3'>60</font> seconds</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="check_your_email_msg">A message has been sent to your email, check the message so you can to change your password.</string>
    <string name="search_for_friends_quickly">Search For Friends Quickly</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="search_user_desc">Reach your friend quickly by using the search box to search your friend’s code, or scanning his QR code.</string>
    <string name="not_found_user_text">We didn’t found any results with this code, please ask your friend about the correct code or try to scan his QR code.</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_messages">No Messages</string>
    <string name="no_messages_desc">There are no previous messages between you and this user.</string>
    <string name="type_message">Type Message</string>
    <string name="contact">Contact</string>
    <string name="select_a_group">Select A Group</string>
    <string name="select_group_desc">Choose the group you want to the message send to it</string>
    <string name="sign_up_method_text">What do you want to sign up with?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_details_text_temp">The messages of this group are viewed on
        <b>Sunday, Monday, Tuesday, Wednesday </b>
        and <b>Thursday</b> from <b>8 am</b> to <b>5 pm</b>.</string>
    <string name="actions">Actions</string>
    <string name="view_profile">View Profile</string>
    <string name="shared_media">Shared Media</string>
    <string name="move_to_other_classification">Move to Other Classification</string>
    <string name="report_user">Report User</string>
    <string name="block_user">Block User</string>
    <string name="delete_message">Delete Message?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="chats">Chats</string>
    <string name="groups">Groups</string>
    <string name="members">Members</string>
    <string name="my_account">My Account</string>
    <string name="search_members">Search Members</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="share_account">Share Account</string>
    <string name="copy_link">Copy Link</string>
    <string name="facebook">Facebook</string>
    <string name="whats_app">What’s App</string>
    <string name="group_number_srting">You have %d/5 groups</string>
    <string name="group_actions">Group Actions</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_members_to_group">Add Members to Group</string>
    <string name="delete_group">Delete Group?</string>
    <string name="delete_group_msg_question">You will delete <b>“Hospital Team”</b> group, are you sure?</string>
    <string name="create_new_group">Create New Group</string>
    <string name="add_main_info">Add Main Info</string>
    <string name="upload_group_cover_image">Upload Group Cover Image</string>
    <string name="group_name">Group Name</string>
    <string name="public_">Public</string>
    <string name="or">Or</string>
    <string name="private_">Private</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="add_group_members">Add Group Members</string>
    <string name="you_have_no_members">You Have No Members</string>
    <string name="add_select"><![CDATA[Add & Select]]></string>
    <string name="mobile">Mobile</string>
    <string name="close_receiving_messages">Close receiving messages</string>
    <string name="manage_recieving_messages_days">Manage Recieving Messages Days</string>
    <string name="manage_recieving_messages_days_desc">Choose the days you want to receive messages in this group. In the unsellected days, you won\'t receive any messages.</string>
    <string name="close_receiving_messages_msg">You will not recieve any messages on this group.</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="manage_recieving_messages_times">Manage Recieving Messages Time(s)</string>
    <string name="manage_recieving_messages_times_desc">Select the time(s) you want to receive messages from this group. The dates that you do not choose will not receive messages during them</string>
    <string name="all_days">All Days</string>
    <string name="daily">Daily</string>
    <string name="times_desc">The added time will be applied on the all selected days.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="group_members">Group Members</string>
    <string name="view_all">View All</string>
    <string name="edit">Edit</string>
    <string name="receiving_messages_on_off">Receiving Messages On</string>
    <string name="receiving_messages_days_num">(5 Days)</string>
    <string name="messages">Messages</string>
    <string name="more">More</string>
    <string name="remove_members">Remove Members</string>
    <string name="remove_members_msg">You will remove <b>“Akram Tawfik, Shadwa Ghali”</b> from your members list, are you sure?</string>
    <string name="remove">Remove</string>
    <string name="block_members">Block Members</string>
    <string name="block_members_msg">You will block <b>“Akram Tawfik, Shadwa Ghali”</b> , are you sure?</string>
    <string name="search_messages">Search Messages</string>
    <string name="remove_messages">Remove Messages</string>
    <string name="remove_messages_msg">You will delete the message, Are you sure?</string>
    <string name="edit_days_times"><![CDATA[Edit Days & Times]]></string>
    <string name="search_friends">Search Friends</string>
</resources>