<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatsFragment"
        android:icon="@drawable/chat_bubble_outline_black_24dp_1"
        android:title="@string/chats" />

    <item
        android:id="@+id/groupsFragment"
        android:icon="@drawable/dashboard_customize_black_24dp_1"
        android:title="@string/groups" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/membersFragment"
        android:icon="@drawable/groups_black_24dp_1"
        android:title="@string/members" />

    <item
        android:id="@+id/myAccountFragment"
        android:icon="@drawable/person_pin_black_24dp_1"
        android:title="@string/my_account" />

</menu>