<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:id="@+id/times_desc"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/times_desc"-->
<!--            android:textColor="@color/LighterGray"-->
<!--            android:textSize="12sp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/LighterGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/LighterGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/LighterGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/LighterGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/LighterGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/LighterGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textColor="@color/DarkGray"
            android:textFontWeight="400"
            android:textSize="16sp" />

        <include
            layout="@layout/from_to_select_times_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="64dp"/>

    </LinearLayout>
</ScrollView>