<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.screens.authentication.SignUpActivity">

    <ImageButton
        android:id="@+id/close_dialog_button"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:src="@drawable/close_black_24dp_1"
        android:background="@null"
        android:tint="@color/colorSecondary"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/forgot_password_text"
        app:layout_constraintBottom_toBottomOf="@id/forgot_password_text"/>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_your_password"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textFontWeight="700"
        app:fontFamily="@font/ubuntu_mono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/linear_gradient_primary_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

    <TextView
        android:id="@+id/forgot_password_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/forgot_password_desc"
        android:textSize="14sp"
        android:lineSpacingExtra="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_view" />

    <TextView
        android:id="@+id/receive_mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recieve_email_msg"
        android:textColor="@color/LighterGray"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height_size"
        android:layout_marginStart="@dimen/margin_borders_fields"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="@dimen/margin_borders_fields"
        android:background="@drawable/textfield_default_placeholder_bg"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_desc" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height_size"
        android:layout_marginStart="@dimen/margin_borders_fields"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/margin_borders_fields"
        android:layout_marginBottom="58dp"
        android:background="@drawable/dimmed_button_bg"
        android:text="@string/send"
        android:textColor="@color/White"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>