<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".presentation.authentication.ForgotPasswordActivity">
    
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrorw"
        android:background="@null"
        android:layout_marginTop="@dimen/top_dim_margin"
        android:layout_marginStart="@dimen/left_dim_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/forgot_password_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password_bg_2"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/secondary_icon_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password_vector"
        android:layout_marginTop="88dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="700"
        android:textSize="40sp"
        app:fontFamily="@font/ubuntu_mono"
        android:lineSpacingExtra="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/forgot_password_bg" />

    <TextView
        android:id="@+id/forgot_password_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/forgot_password_desc"
        android:textSize="14sp"
        android:lineSpacingExtra="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_bg" />

    <TextView
        android:id="@+id/receive_mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/recieve_email_msg"
        android:textColor="@color/LighterGray"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height_size"
        android:layout_marginStart="@dimen/margin_borders_fields"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="@dimen/margin_borders_fields"
        android:background="@drawable/textfield_default_placeholder_bg"
        android:fontFamily="@font/roboto"
        android:hint="@string/email"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_desc" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height_size"
        android:layout_marginStart="@dimen/margin_borders_fields"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/margin_borders_fields"
        android:layout_marginBottom="58dp"
        android:background="@drawable/dimmed_button_bg"
        android:text="@string/send"
        android:textColor="@color/White"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>