<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/close_dialog_button"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginEnd="34dp"
        android:background="@null"
        android:src="@drawable/close_black_24dp_1"
        android:tint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="@id/dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_title" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/remove_messages"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="700"
        android:textSize="24sp"
        app:fontFamily="@font/ubuntu_mono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/separator_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/linear_gradient_primary_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title" />

    <TextView
        android:id="@+id/delete_members_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/remove_messages_msg"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_view" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="58dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_members_msg">

        <Button
            style="@style/DimmedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_main_blue_bg"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textFontWeight="700"
            android:textSize="18sp" />

        <Button
            style="@style/DimmedButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_solid_red_bg"
            android:text="@string/remove"
            android:textColor="@color/White"
            android:textFontWeight="700"
            android:textSize="18sp"
            app:icon="@drawable/delete_black_24dp_2"
            app:iconGravity="textStart"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>